--- a/index.html
+++ b/index.html
@@ -105,9 +105,8 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <span>Increase your client for</span>
-                     <h2>Better position of Business</h2>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page </p>
+                     <span>¿Quiénes somos?</span>
+                     <h2>Esta es nuestra descripción!</h2>
                   </div>
                </div>
             </div>
@@ -117,11 +116,10 @@
                      <div class="col-md-12">
                         <div class="business_box ">
                            <figure><img src="images/business_img.jpg" alt="#"/></figure>
-                           <p>There are many variations of passages of Lorem Ipsum available,
-                              but the majority have suffered alteration in some form, by injected humour,
-                              or randomised words which don't look even slightly believableThere are many variations
-                              of passages of Lorem Ipsum available, but the majority have suffered alteration in some
-                              form, by injected humour, or randomised words which don't look even slightly believable</p>
+                           <p>Somos un equipo de estudiantes de Ingeniería dedicados a mejorar la calidad de vida de las personas a través de la tecnología.
+                              Nuestro último proyecto es una aplicación integral para el monitoreo de la diabetes,
+                              que no solo registra los niveles de glucosa en sangre y los medicamentos,
+                              sino que también monitorea la dieta y el ejercicio del usuario para tener un ritmo de vida más saludable.
                            <a class="read_more" href="#">Read more</a>
                         </div>
                      </div>
@@ -137,9 +135,11 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <span>Previous Projects</span>
+                     <span>Nuestra misión</span>
                      <h2>Better position of Business</h2>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page </p>
+                     <p>Nuestra misión es proporcionar soluciones tecnológicas que ayuden a las personas a manejar mejor su salud.
+                        Con nuestra aplicación de monitoreo de la diabetes, aspiramos a dar a los usuarios el control de su enfermedad
+                        y a promover un estilo de vida saludable</p>
                   </div>
                </div>
             </div>
