--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>XEJ Sugar - Inicio</title>
+      <title>diigo</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -119,7 +119,7 @@
                            <p>Somos un equipo de estudiantes de Ingeniería dedicados a mejorar la calidad de vida de las personas a través de la tecnología.
                               Nuestro último proyecto es una aplicación integral para el monitoreo de la diabetes,
                               que no solo registra los niveles de glucosa en sangre y los medicamentos,
-                              sino que también monitorea la dieta y el ejercicio del usuario para tener un ritmo de vida más saludable.
+                              sino que también monitorea la dieta y el ejercicio del usuario para tener un ritmo de vida más saludable.</p>
                            <a class="read_more" href="#">Read more</a>
                         </div>
                      </div>
@@ -136,7 +136,7 @@
                <div class="col-md-12">
                   <div class="titlepage">
                      <span>Nuestra misión</span>
-                     <h2>Better position of Business</h2>
+                     <h2>¿Por qué hacemos esto?</h2>
                      <p>Nuestra misión es proporcionar soluciones tecnológicas que ayuden a las personas a manejar mejor su salud.
                         Con nuestra aplicación de monitoreo de la diabetes, aspiramos a dar a los usuarios el control de su enfermedad
                         y a promover un estilo de vida saludable</p>
@@ -152,9 +152,12 @@
                         </div>
                      </div>
                      <div class="col-md-12">
-                        <div class="projects_box ">
-                           <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believableThere are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable</p>
-                           <a class="read_more" href="#">Read more</a>
+                        <div class="titlepage">
+                           <span>Nuestra visión</span>
+                           <h2>¿A qué aspiramos?</h2>
+                           <p>Nos vemos como líderes en el campo de la tecnología de la salud,
+                              reconocidos por nuestras soluciones intuitivas y centradas en el usuario.
+                              Aspiramos a ser el recurso confiable para todas las necesidades de gestión de la diabetes.</p>
                         </div>
                      </div>
                   </div>
@@ -202,7 +205,7 @@
                <div class="col-md-12">
                   <div class="titlepage">
                      <h2>Cotactanos!!!</h2>
-                     <span>Envianos un mensaje</span>
+                     <span>Estamos dispuestos a escucharte</span>
                   </div>
                </div>
             </div>
@@ -213,19 +216,19 @@
                   <form class="main_form ">
                      <div class="row">
                         <div class="col-md-12 ">
-                           <input class="form_contril" placeholder="Name " type="text" name="Name ">
+                           <input class="form_contril" placeholder="Nombre " type="text" name="Name ">
                         </div>
                         <div class="col-md-12">
-                           <input class="form_contril" placeholder="Phone Number" type="text" name=" Phone Number">
+                           <input class="form_contril" placeholder="Telefono" type="text" name=" Phone Number">
                         </div>
                         <div class="col-md-12">
                            <input class="form_contril" placeholder="Email" type="text" name="Email">
                         </div>
                         <div class="col-md-12">
-                           <textarea class="textarea" placeholder="Message" type="text" name="Message"></textarea>
+                           <textarea class="textarea" placeholder="Escribe tu mensaje aqui!" type="text" name="Message"></textarea>
                         </div>
                         <div class="col-sm-12">
-                           <button class="send_btn">Send</button>
+                           <button class="send_btn">Enviar</button>
                         </div>
                      </div>
                   </form>
@@ -239,6 +242,7 @@
          <div class="footer">
             <div class="container">
                <div class="row">
+                  <!--
                   <div class="col-md-12 ">
                      <div class="cont">
                         <h3> <strong class="multi"> Free Multipurpose Responsive</strong><br>
@@ -246,6 +250,7 @@
                         </h3>
                      </div>
                   </div>
+                  -->
                   <div class="col-md-12">
                      <ul class="social_icon">
                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
