--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>Cotactanos!!!</h2>
+                     <h2>Cotáctanos!!!</h2>
                      <span>Estamos dispuestos a escucharte</span>
                   </div>
                </div>
