--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                      <div class="col-md-6">
                         <div class="text-bg">
                            <h1>XEJ Sugar</h1>
-                           <p style = "font-size: 35px">La app que te acompaña día a día con tu diabetes</p>
+                           <p>La app que te acompaña día a día con tu diabetes</p>
                            <a href="#conocenos">Mas acerca de nosotros</a>
                         </div>
                      </div>
